<resources>
    <string name="app_name">Yubicrypt</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="offline_title" />
    <string name="encryptfile">Encrypt file</string>
    <string name="decryptfile">Decrypt file</string>
    <string name="home">Home</string>
    <string name="offline">Offline</string>
    <string name="dropbox">Dropbox</string>
    <string name="meocloud">Meo Cloud</string>
    <string name="login_with_dropbox">Login with Dropbox</string>
    <string name="email">E-mail:</string>
    <string name="name">Name:</string>
    <string name="acctype">Type:</string>
    <string name="meo_status">Session status:</string>
    <string name="file_filename">Filename:</string>
    <string name="file_size">Size:</string>
    <string name="file_modified">Modified:</string>
    <string name="meo_refresh_button">Refresh List</string>

    <string name="main_text">This application allows encrypting and decrypting files using a password and a Yubikey.\nIt features a local mode, a Dropbox integration and a MeoCloud Integration (through our Yubicrypt web service).
         </string>
    <string name="main_text2">Project #15 - 2016\n
        Developer: André Monteiro\n
        Supervisor: Dr. Paul Andrew Crocker, PhD</string>
</resources>
