<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_offline"
            android:icon="@drawable/ic_menu_file_cloud_off"
            android:title="@string/offline" />
        <item
            android:id="@+id/nav_dropbox"
            android:icon="@drawable/ic_file_cloud_queue"
            android:title="@string/dropbox" />
        <item
            android:id="@+id/nav_meocloud"
            android:icon="@drawable/ic_file_cloud_queue"
            android:title="@string/meocloud" />
    </group>

</menu>
